<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/create_note_bg"
    android:orientation="vertical"
    android:paddingBottom="2dp" >


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" >











        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_input_table_border"
            android:padding="5dip"
            android:text="@string/notes_ref_id"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />









        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_input_table_border"
            android:padding="5dip"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />

    </TableRow>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tableRow1"
        android:layout_marginBottom="60dp"
        android:background="@drawable/border3" >










        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical" >

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                tools:ignore="UselessParent" >

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_notes"
                    android:ems="10"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lineSpacingMultiplier="1.31"
                    android:minLines="10" >

                    <requestFocus />
                </EditText>
            </TableRow>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_blue"
                android:padding="10dp"
                android:text="@string/save"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_blue"
                android:padding="10dp"
                android:text="@string/delete"
                android:textStyle="bold" />
        </TableRow>
    </LinearLayout>

</RelativeLayout>
